// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchTab (active) renders and matches snapshot 1`] = `
Object {
  "_locale": "de",
  "_width": 1200,
  "html": "
<button
  type=submit
  data-dmattributes=active
  data-dmid=search-tab-TEST
  className=searchTab__hr83d3
>
  <span>Produkte (25)</span>
</button>;
",
  "styles": "
.searchTab__hr83d3:focus {
  outline: none;
}
.searchTab__hr83d3:after {
  box-sizing: border-box;
  display: block;
  content: \\" \\";
  position: absolute;
  width: 1em;
  height: 1em;
  border: 2px solid #002878;
  z-index: 1;
  background-color: #002878;
  top: 2em;
  margin-left: -6px;
  left: 50%;
  transform: rotate(45deg);
}
.searchTab__hr83d3 {
  background-color: #002878;
  height: 2.5rem;
  line-height: 2.7em;
  color: #ffffff;
  border: 0;
  cursor: pointer;
  position: relative;
  z-index: 1;
  margin: 0.3125rem;
  border-radius: 1.5625rem;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  -webkit-box-align: center;
  justify-content: center;
  -webkit-box-pack: center;
  font-size: 1rem;
  font-family: dmbrand-medium, Arial, Helvetica, sans-serif;
  padding: 0 0.9375rem;
}
",
}
`;

exports[`SearchTab (not active) renders and matches snapshot 1`] = `
Object {
  "_locale": "de",
  "_width": 1200,
  "html": "
<button
  type=submit
  data-dmattributes
  data-dmid=search-tab-TEST
  className=searchTab__g9xlgf
>
  <span>Produkte (25)</span>
</button>;
",
  "styles": "
.searchTab__g9xlgf:focus {
  outline: none;
}
.searchTab__g9xlgf:after {
  box-sizing: border-box;
  display: none;
  content: \\" \\";
  position: absolute;
  width: 1em;
  height: 1em;
  border: 2px solid #002878;
  z-index: 1;
  background-color: #002878;
  top: 2em;
  margin-left: -6px;
  left: 50%;
  transform: rotate(45deg);
}
.searchTab__g9xlgf {
  background-color: #e5e9f1;
  height: 2.5rem;
  line-height: 2.7em;
  color: #002878;
  border: 0;
  cursor: pointer;
  position: relative;
  z-index: 1;
  margin: 0.3125rem;
  border-radius: 1.5625rem;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  -webkit-box-align: center;
  justify-content: center;
  -webkit-box-pack: center;
  font-size: 1rem;
  font-family: dmbrand-medium, Arial, Helvetica, sans-serif;
  padding: 0 0.9375rem;
}
",
}
`;
